--- a/static/index.html
+++ b/static/index.html
@@ -12,13 +12,13 @@
     <h1 class="text-3xl font-bold mb-6 text-center">🔍 職缺技能分析</h1>
 
     <form id="search-form" class="flex items-center gap-4 mb-8">
-      <input id="keyword" type="text" placeholder="輸入職缺關鍵字（如 SRE、行銷企劃）"
+      <input id="keyword" type="text" placeholder="輸入職缺關鍵字（如 SRE、DevOps、行銷企劃）"
         class="flex-grow px-4 py-2 border rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-400" />
       <button type="submit"
         class="px-4 py-2 bg-blue-600 text-white font-semibold rounded-lg hover:bg-blue-700 transition">查詢</button>
     </form>
 
-    <div id="loading" class="text-blue-500 hidden mb-4">🔄 資料擷取中，請稍候...</div>
+    <div id="loading" class="text-blue-500 hidden mb-4">🔄 資料擷取中，請稍候...(約莫1-5分鐘)</div>
 
     <div id="result" class="space-y-10 hidden">
       <div>
