--- a/static/index.html
+++ b/static/index.html
@@ -64,46 +64,52 @@
       jobTable.innerHTML = '';
       if (chart) chart.destroy();
 
-      const res = await fetch(`/skills/json?keyword=${encodeURIComponent(keyword)}`);
-      const data = await res.json();
+      try {
+        const res = await fetch(`/skills/json?keyword=${encodeURIComponent(keyword)}&t=${Date.now()}`);
+        const data = await res.json();
 
-      loading.classList.add('hidden');
-      resultSection.classList.remove('hidden');
+        loading.classList.add('hidden');
+        resultSection.classList.remove('hidden');
 
-      const labels = data.top_skills.map(s => s.skill);
-      const counts = data.top_skills.map(s => s.count);
+        const labels = data.top_skills.map(s => s.skill);
+        const counts = data.top_skills.map(s => s.count);
 
-      chart = new Chart(chartCanvas, {
-        type: 'bar',
-        data: {
-          labels,
-          datasets: [{
-            label: '出現次數',
-            data: counts,
-            backgroundColor: '#3b82f6'
-          }]
-        },
-        options: {
-          responsive: true,
-          plugins: {
-            legend: { display: false },
-            tooltip: { enabled: true }
+        chart = new Chart(chartCanvas, {
+          type: 'bar',
+          data: {
+            labels,
+            datasets: [{
+              label: '出現次數',
+              data: counts,
+              backgroundColor: '#3b82f6'
+            }]
           },
-          scales: {
-            x: { title: { display: true, text: '技能' } },
-            y: { title: { display: true, text: '出現次數' }, beginAtZero: true }
+          options: {
+            responsive: true,
+            plugins: {
+              legend: { display: false },
+              tooltip: { enabled: true }
+            },
+            scales: {
+              x: { title: { display: true, text: '技能' } },
+              y: { title: { display: true, text: '出現次數' }, beginAtZero: true }
+            }
           }
-        }
-      });
+        });
 
-      for (const job of data.jobs) {
-        const row = document.createElement('tr');
-        row.innerHTML = `
-          <td class="border px-4 py-2">${job.title}</td>
-          <td class="border px-4 py-2">${job.company}</td>
-          <td class="border px-4 py-2 text-sm text-gray-600">${(job.skills || []).slice(0, 10).join(', ')}</td>
-        `;
-        jobTable.appendChild(row);
+        for (const job of data.jobs) {
+          const row = document.createElement('tr');
+          row.innerHTML = `
+            <td class="border px-4 py-2">${job.title}</td>
+            <td class="border px-4 py-2">${job.company}</td>
+            <td class="border px-4 py-2 text-sm text-gray-600">${(job.skills || []).slice(0, 10).join(', ')}</td>
+          `;
+          jobTable.appendChild(row);
+        }
+      } catch (err) {
+        loading.classList.add('hidden');
+        alert("❌ 無法載入資料，請稍後再試！");
+        console.error(err);
       }
     });
   </script>
